update:tag and range

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"svelte": "./swiper.esm.js",
 	"dependencies": {
 		"svelte-hero-icons": "^5.0.0",
-		"swiper": "^10.1.0"
+		"swiper": "^10.1.0",
+		"yootils": "^0.3.1"
 	}
 }
